# PantheonOnsite

./: .gitignore  .gitmodules  .onsiteAliases  README.md
docs/superpowers/plans/: 2026-06-11-vr-ik-teleop.md
docs/superpowers/specs/: 2026-06-11-vr-ik-teleop-design.md
leader/: can_muti_activate.sh  joint_controller.py  piperx_setup.py  pyproject.toml  send_joints.py
vr/: ik_teleop.py  index.html  quest_server.py  test_ik_teleop.py
